# rnnoise-examples-for-pico-2

./: CMakeLists.txt  LICENSE  README.md
examples/benchmark/: CMakeLists.txt  main.c
examples/serial/: CMakeLists.txt  main.c  serial_denoise.py
examples/usb_pdm_microphone/: CMakeLists.txt  main.c
lib/rnnoise/src/: denoise.c
